# aigp-round1-qualifier

./: .gitignore  ARTICLE.md  README.md  fly.py  pyproject.toml  relay.py
src/aigp_pilot/: analyze.py  control.py  course.py  fusion.py  parsers.py  planner.py  raceconfig.py  raceline.py  telemetry.py  vision_truth.py
tests/: test_imports.py
