[project]
name = "aigp-round1-qualifier"
version = "0.1.0"
description = "Physics-based autonomous pilot for the AI-GP Round 1 simulator qualifier."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pymavlink>=2.4.49",
    "scipy>=1.11",
]

[project.scripts]
aigp-fly = "fly:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["fly"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
